crates/glyph-cli/tests/corpus/valid/imports/consumer.glyph
import "./types.glyph" { Severity }

skill triage(level: Severity = "medium")
    description: "Triage an incoming issue."
    flow:
        "Read the issue."
        "Assign severity."
